fix: subpanel alignment all modules

--- a/docker/advocase-image/build-files/suitecrm/public/legacy/themes/suite8/css/suitep-base/detailview.scss
+++ b/docker/advocase-image/build-files/suitecrm/public/legacy/themes/suite8/css/suitep-base/detailview.scss
@@ -268,8 +268,7 @@ p.msg {
 #whole_subpanel_therevisions {
   position: absolute;
   width: 100%;
-  padding-right: 18px;
-  margin-left: 1px;
+  left: 0;
 }
 
 #list_subpanel_therevisions table:first-of-type {
@@ -287,28 +286,24 @@ p.msg {
 #whole_subpanel_contacts {
   position: absolute;
   width: 100%;
-  padding-right: 18px;
-  margin-left: -1px;
+  left: 0;
 }
 
 #whole_subpanel_cases {
   position: absolute;
   width: 100%;
-  padding-right: 18px;
-  margin-left: -1px;
+  left: 0;
 }
 
 #whole_subpanel_users {
   position: absolute;
   width: 100%;
-  padding-right: 18px;
-  padding-left: 1px;
+  left: 0;
 }
 
 #whole_subpanel_aclroles {
   position: absolute;
-  width: 100%;
-  padding-right: 20px;
+  left: 0;
 }
 
 #subpanel_users {
